--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
         <table class="table" style="background-color: transparent;">
           <thead>
             <tr>
-              <th align="center"><strong><span class="icon"><i class="fas fa-hiking"></i></span>Content Prompt</strong></th>
-              <th align="center"><strong><span class="icon"><i class="fas fa-microphone"></i></span>Style Prompt</strong></th>
+              <!-- <th align="center"><strong><span class="icon"><i class="fas fa-hiking"></i></span>Content Prompt</strong></th>
+              <th align="center"><strong><span class="icon"><i class="fas fa-microphone"></i></span>Style Prompt</strong></th> -->
+              <th align="center"><strong>Content Prompt</strong></th>
+              <th align="center"><strong>Style Prompt</strong></th>
               <th align="center"><strong>GT</strong></th>
               <th align="center"><strong>PromptTTS</strong></th>
               <th align="center"><strong>M1</strong></th>
@@ -181,8 +183,8 @@
         <table class="table" style="background-color: transparent;">
           <thead>
             <tr>
-              <th align="center"><strong><span class="icon"><i class="fas fa-hiking"></i></span>Content Prompt</strong></th>
-              <th align="center"><strong><span class="icon"><i class="fas fa-microphone"></i></span>Style Prompt</strong></th>
+              <th align="center"><strong>Content Prompt</strong></th>
+              <th align="center"><strong>Style Prompt</strong></th>
               <th align="center"><strong>GT</strong></th>
               <th align="center"><strong>PromptTTS</strong></th>
               <th align="center"><strong>M1</strong></th>
@@ -208,6 +210,33 @@
               <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M1/1413_121799_000031_000002.wav" type="audio/wav"></audio></td>
               <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M2/1413_121799_000031_000002.wav" type="audio/wav"></audio></td>
               <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/diffprompt/1413_121799_000031_000002.wav" type="audio/wav"></audio></td>
+            </tr>
+            <tr>
+              <td width="25%" style="text-align: center;"><p>It was not far off, only a hundred yards to the right at the top of the hill.</p></td>
+              <td width="25%" style="text-align: center;"><p>High tone, fast language, normal volume, female </p></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/gt/1463_134463_000076_000004.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/prompttts/1463_134463_000076_000004.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M1/1463_134463_000076_000004.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M2/1463_134463_000076_000004.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/diffprompt/1463_134463_000076_000004.wav" type="audio/wav"></audio></td>
+            </tr>
+            <tr>
+              <td width="25%" style="text-align: center;"><p>But let me ask a prior question: You admit that there are differences of arts?</p></td>
+              <td width="25%" style="text-align: center;"><p>A man talking slowly, but the sound is high</p></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/gt/1513_140222_000098_000001.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/prompttts/1513_140222_000098_000001.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M1/1513_140222_000098_000001.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M2/1513_140222_000098_000001.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/diffprompt/1513_140222_000098_000001.wav" type="audio/wav"></audio></td>
+            </tr>
+            <tr>
+              <td width="25%" style="text-align: center;"><p>Yea, this ego, with its contradiction and perplexity, speaketh most uprightly of its being--this creating, willing, evaluing ego, which is the measure and value of things.</p></td>
+              <td width="25%" style="text-align: center;"><p>Please use a slow tone speed and lower volume to say a man</p></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/gt/1392_128226_000022_000000.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/prompttts/1392_128226_000022_000000.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M1/1392_128226_000022_000000.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/M2/1392_128226_000022_000000.wav" type="audio/wav"></audio></td>
+              <td width="10%" style="text-align: center;"><audio controls="" ><source src="static/audio_sample/LibriTTS/diffprompt/1392_128226_000022_000000.wav" type="audio/wav"></audio></td>
             </tr>
           </tbody>
         </table>
@@ -257,7 +286,7 @@
             </tr>
           </tbody>
         </table> -->
-        
+
       </div>
     </div>
   </div>
